Try min-height in btn-group to prevent re-sizing on mobile.

--- a/SpartanClash/wwwroot/css/game-result-card.css
+++ b/SpartanClash/wwwroot/css/game-result-card.css
@@ -106,6 +106,7 @@
 
 .btn-group { /*.filter-item*/
     width: 33%;
+    min-height: 48px;
     vertical-align: central;
     text-align: center;
     border: none;
@@ -114,8 +115,6 @@
 .btn-xs { /*.filter-btn*/
     background-color: #333333;
     width: 100%;
-    line-height: 1.5em;
-    min-height: 4.5em;
     height: 100%;
     border: none;
     cursor: pointer;
